fixed some layout bug

--- a/sass/audio-editor.scss
+++ b/sass/audio-editor.scss
@@ -8,7 +8,7 @@
   @include single-box-shadow;
 }
 .audio-editor{
-  width: 1024;
+  width: 1024px;
   height: 256px;
   position: absolute;
   -moz-user-select: -moz-none;
